--- a/happybirthday.html
+++ b/happybirthday.html
@@ -52,7 +52,7 @@
 </head>
 <body>
     <div class="card">
-        <img src="/Users/tammy.hartline/Desktop/bday.png" alt="Mary Lou's photo">
+        <img src="bday.png" alt="Mary Lou's photo">
         <h1>Happy Birthday!</h1>
         <p>"You're the best dad in the whole world! I love you!"
             <br>~Lou
