--- a/happybirthday.html
+++ b/happybirthday.html
@@ -3,31 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Happy Birthday!</title>
     <style>
+
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .card {
-            background-color: #ffd699;
-            border-radius: 20px;
-            padding: 40px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-            text-align: center;
-            max-width: 600px;
-        }
-        h1 {
-            color: #cc6600;
-            font-size: 24px;
-            margin-bottom: 20px;
-        }
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #f0f0f0;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.card {
+    background-color: #ffd699;
+    border-radius: 20px;
+    padding: 40px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    max-width: 600px;
+}
+
+h1 {
+    color: #cc6600;
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+p {
+    color: #333;
+    margin-bottom: 10px;
+    line-height: 1.0;
+}
+
+img {
+    width: 350px;
+    height: 350px;
+    /* object-fit: cover; Remove this line */
+    margin-bottom: 20px;
+}
+
+.message {
+    font-style: italic;
+    color: #cc6600;
+    font-size: 14px;
+}
+
+.signature {
+    font-weight: bold;
+    color: #cc6600;
+}
+
+/* Responsive styles */
+@media only screen and (max-width: 600px) {
+    .card {
+        padding: 20px; /* Adjust padding for smaller screens */
+        max-width: 90%; /* Limit maximum width for smaller screens */
+    }
+
+    img {
+        width: 100%; /* Make image responsive to fill the width of the card */
+        height: auto; /* Maintain aspect ratio */
+    }
+
+    h1 {
+        font-size: 20px; /* Adjust font size for smaller screens */
+    }
+}
         p {
             color: #333;
             margin-bottom: 10px;
