--- a/happybirthday.html
+++ b/happybirthday.html
@@ -17,33 +17,34 @@
         }
         .card {
             background-color: #ffd699;
-            border-radius: 5vw; /* Adjusted border radius */
-            padding: 5vw; /* Adjusted padding */
+            border-radius: 1vw; /* Adjusted border radius */
+            padding: 2vw; /* Adjusted padding */
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
             text-align: center;
             max-width: 90%; /* Adjusted max-width */
         }
         h1 {
             color: #cc6600;
-            font-size: 4vw; /* Adjusted font size */
-            margin-bottom: 4vw; /* Adjusted margin */
+            font-size: 3vw; /* Adjusted font size */
+            margin-bottom: 2vw; /* Adjusted margin */
         }
         p {
             color: #333;
-            margin-bottom: 2vw; /* Adjusted margin */
+            margin-bottom: 1vw; /* Adjusted margin */
             line-height: 1.5;
         }
         img {
             width: 100%; /* Adjusted width to fill the container */
             max-width: 100%;
-            border-radius: 50%;
-            margin-bottom: 4vw; /* Adjusted margin */
+            height: auto;
+            border-radius: 1vw; /* Adjusted border radius */
+            margin-bottom: 2vw; /* Adjusted margin */
         }
         .message {
             font-style: italic;
             color: #cc6600;
-            font-size: 2vw; /* Adjusted font size */
-            margin-bottom: 2vw; /* Adjusted margin */
+            font-size: 1.5vw; /* Adjusted font size */
+            margin-bottom: 1vw; /* Adjusted margin */
         }
         .signature {
             font-weight: bold;
