--- a/happybirthday.html
+++ b/happybirthday.html
@@ -57,7 +57,13 @@
         <img src="bday.png" alt="Mary Lou's photo">
         <h1>Happy Birthday!</h1>
         <p>"You're the best dad in the whole world! I love you!"
-            <br>~Lou
+            <br>~ Mary Lou
+        </p>
+        <p>"Happy birthday Dad. I love you!"
+            <br>~ Bonnie
+        </p>
+        <p>"Deddy I love you and hope you have a great birthday!"
+            <br>~ Dixie
         </p>
         <p>"You deserve to have the best day today, yes because it is your birthday,
             but moreso because you are the best friend anyone could ask for, the most loving 
