--- a/happybirthday.html
+++ b/happybirthday.html
@@ -74,7 +74,7 @@
             <br>~Tammy
         </p>
         <p class="message">We love you!</p>
-        <p class="signature">Love, <br> Lou Lou & Tammy</p>
+        <p class="signature">Love, <br> ~ Your Girls</p>
     </div>
 </body>
 </html>
